scripts/kubernetes/manifests.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloapp
  labels:
    app: helloapp
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  replicas: 3
  minReadySeconds: 30
  template:
    metadata:
      labels:
        app: helloapp
        version: "0.1"
    spec:
      containers:
      - name: helloapp
        image: gcr.io/${GCLOUD_PROJECT_ID}/helloapp:${HELLOAPP_VERSION}
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 8080

        readinessProbe:
          httpGet:
            path: /sys/health
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 4
          periodSeconds: 5
          failureThreshold: 1
          successThreshold: 2

        livenessProbe:
          httpGet:
            path: /sys/health
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 2
          failureThreshold: 5
          successThreshold: 1

---

apiVersion: v1
kind: Service
metadata:
  name: helloapp-svc
  labels:
    app: helloapp
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: http-server
  selector:
    app: helloapp

---

apiVersion: v1
kind: Service
metadata:
  name: helloapp-lb
  labels:
    app: helloapp
spec:
  type: LoadBalancer
  loadBalancerIP: ${HELLOAPP_SERVICE_STATIC_IP}
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: http-server
  selector:
    app: helloapp

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloapp-http
spec:
  backend:
    serviceName: helloapp
    servicePort: 80
