scripts/kubernetes/static.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: static
  labels:
    app: static
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
      - name: nginx
        image: nginx:1.13
        ports:
        - name: static-http
          containerPort: 80

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  name: static
  labels:
    app: static
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: static-http
  selector:
    app: static

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: static
spec:
  backend:
    serviceName: static
    servicePort: 80
